src/test/compile-fail/view-items-at-top.rs
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

extern crate test;

fn f() {
}

use test::net;    //~ ERROR `use` and `extern crate` declarations must precede items

fn main() {
}
